gen/HashParser.java
// Generated from C:/Users/XMART/IdeaProjects/modelcheking/src/Hash.g4 by ANTLR 4.13.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class HashParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, Baste=30, Biar=31, Adad=32, 
		Ashari=33, Boole=34, Matn=35, Harf=36, Hich=37, Khali=38, Age=39, Bood=40, 
		Vagarna=41, Ta=42, Baraye=43, Shekan=44, Edame=45, Entekhab=46, Halat=47, 
		Digar=48, Bebin=49, Bede=50, Klass=51, In=52, Jadid=53, Emtehan=54, Gereftar=55, 
		Akhar=56, Bendaz=57, Bechap=58, Bekhan=59, SefrBood=60, MahdoodeNadorost=61, 
		JadvalKhali=62, GheireMojaz=63, Ashari_Literal=64, Adad_Literal=65, Harf_Literal=66, 
		Matn_Literal=67, Boole_Literal=68, ID=69, CLASSID=70, LINE_COMMENT=71, 
		MULTI_COMMENT=72, WS=73;
	public static final int
		RULE_program = 0, RULE_basteDecl = 1, RULE_biarDecl = 2, RULE_topLevelDecl = 3, 
		RULE_klassDecl = 4, RULE_klassBody = 5, RULE_constructor = 6, RULE_callConstructor = 7, 
		RULE_fields = 8, RULE_fieldAccess = 9, RULE_methodCall = 10, RULE_constructorAccess = 11, 
		RULE_objectInstantiation = 12, RULE_functionDecl = 13, RULE_param = 14, 
		RULE_returnStmt = 15, RULE_returnfunction = 16, RULE_voidfunction = 17, 
		RULE_callFunction = 18, RULE_args = 19, RULE_varDecl = 20, RULE_type = 21, 
		RULE_stmt = 22, RULE_ifStmt = 23, RULE_loopStmt = 24, RULE_whileStmt = 25, 
		RULE_forStmt = 26, RULE_breakStmt = 27, RULE_continueStmt = 28, RULE_switchStmt = 29, 
		RULE_caseStmt = 30, RULE_defaultStmt = 31, RULE_exp = 32, RULE_assign = 33, 
		RULE_logicalOr = 34, RULE_logicalAnd = 35, RULE_equality = 36, RULE_relational = 37, 
		RULE_additive = 38, RULE_multiplicative = 39, RULE_power = 40, RULE_unary = 41, 
		RULE_postfix = 42, RULE_primary = 43, RULE_printStmt = 44, RULE_inputStmt = 45, 
		RULE_thisStmt = 46, RULE_exceptionType = 47, RULE_exceptionHandeling = 48, 
		RULE_catchexception = 49, RULE_finallyexception = 50, RULE_throwexception = 51;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "basteDecl", "biarDecl", "topLevelDecl", "klassDecl", "klassBody", 
			"constructor", "callConstructor", "fields", "fieldAccess", "methodCall", 
			"constructorAccess", "objectInstantiation", "functionDecl", "param", 
			"returnStmt", "returnfunction", "voidfunction", "callFunction", "args", 
			"varDecl", "type", "stmt", "ifStmt", "loopStmt", "whileStmt", "forStmt", 
			"breakStmt", "continueStmt", "switchStmt", "caseStmt", "defaultStmt", 
			"exp", "assign", "logicalOr", "logicalAnd", "equality", "relational", 
			"additive", "multiplicative", "power", "unary", "postfix", "primary", 
			"printStmt", "inputStmt", "thisStmt", "exceptionType", "exceptionHandeling", 
			"catchexception", "finallyexception", "throwexception"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'.'", "';'", "'*'", "'{'", "'}'", "'('", "')'", "'='", "','", 
			"'+='", "'-='", "'*='", "'/='", "'||'", "'&&'", "'=='", "'!='", "'<'", 
			"'>'", "'<='", "'>='", "'+'", "'-'", "'/'", "'%'", "'**'", "'!'", "'++'", 
			"'--'", "'baste'", "'biar'", "'adad'", "'ashari'", "'boole'", "'matn'", 
			"'harf'", "'hich'", "'khali'", "'age'", "'bood'", "'vagarna'", "'ta'", 
			"'baraye'", "'shekan'", "'edame'", "'entekhab'", "'halat'", "'digar'", 
			"'bebin'", "'bede'", "'klass'", "'in'", "'jadid'", "'emtehan'", "'gereftar'", 
			"'akhar'", "'bendaz'", "'bechap'", "'bekhan'", "'SefrBood'", "'MahdoodeNadorost'", 
			"'JadvalKhali'", "'GheireMojaz'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "Baste", "Biar", "Adad", "Ashari", 
			"Boole", "Matn", "Harf", "Hich", "Khali", "Age", "Bood", "Vagarna", "Ta", 
			"Baraye", "Shekan", "Edame", "Entekhab", "Halat", "Digar", "Bebin", "Bede", 
			"Klass", "In", "Jadid", "Emtehan", "Gereftar", "Akhar", "Bendaz", "Bechap", 
			"Bekhan", "SefrBood", "MahdoodeNadorost", "JadvalKhali", "GheireMojaz", 
			"Ashari_Literal", "Adad_Literal", "Harf_Literal", "Matn_Literal", "Boole_Literal", 
			"ID", "CLASSID", "LINE_COMMENT", "MULTI_COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Hash.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public HashParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(HashParser.EOF, 0); }
		public List<BasteDeclContext> basteDecl() {
			return getRuleContexts(BasteDeclContext.class);
		}
		public BasteDeclContext basteDecl(int i) {
			return getRuleContext(BasteDeclContext.class,i);
		}
		public List<BiarDeclContext> biarDecl() {
			return getRuleContexts(BiarDeclContext.class);
		}
		public BiarDeclContext biarDecl(int i) {
			return getRuleContext(BiarDeclContext.class,i);
		}
		public List<TopLevelDeclContext> topLevelDecl() {
			return getRuleContexts(TopLevelDeclContext.class);
		}
		public TopLevelDeclContext topLevelDecl(int i) {
			return getRuleContext(TopLevelDeclContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HashListener ) ((HashListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HashListener ) ((HashListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HashVisitor ) return ((HashVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Baste) {
				{
				{
				setState(104);
				basteDecl();
				}
				}
				setState(109);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Biar) {
				{
				{
				setState(110);
				biarDecl();
				}
				}
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(119);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2814882911092736L) != 0)) {
				{
				{
				setState(116);
				topLevelDecl();
				}
				}
				setState(121);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(122);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BasteDeclContext extends ParserRuleContext {
		public TerminalNode Baste() { return getToken(HashParser.Baste, 0); }
		public List<TerminalNode> ID() { return getTokens(HashParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(HashParser.ID, i);
		}
		public BasteDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_basteDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HashListener ) ((HashListener)listener).enterBasteDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HashListener ) ((HashListener)listener).exitBasteDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HashVisitor ) return ((HashVisitor<? extends T>)visitor).visitBasteDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BasteDeclContext basteDecl() throws RecognitionException {
		BasteDeclContext _localctx = new BasteDeclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_basteDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			match(Baste);
			setState(125);
			match(ID);
			setState(130);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(126);
				match(T__0);
				setState(127);
				match(ID);
				}
				}
				setState(132);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(133);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BiarDeclContext extends ParserRuleContext {
		public TerminalNode Biar() { return getToken(HashParser.Biar, 0); }
		public List<TerminalNode> ID() { return getTokens(HashParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(HashParser.ID, i);
		}
		public BiarDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_biarDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HashListener ) ((HashListener)listener).enterBiarDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HashListener ) ((HashListener)listener).exitBiarDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HashVisitor ) return ((HashVisitor<? extends T>)visitor).visitBiarDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BiarDeclContext biarDecl() throws RecognitionException {
		BiarDeclContext _localctx = new BiarDeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_biarDecl);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			match(Biar);
			setState(136);
			match(ID);
			setState(141);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(137);
					match(T__0);
					setState(138);
					match(ID);
					}
					} 
				}
				setState(143);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			setState(146);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__0) {
				{
				setState(144);
				match(T__0);
				setState(145);
				match(T__2);
				}
			}

			setState(148);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TopLevelDeclContext extends ParserRuleContext {
		public KlassDeclContext klassDecl() {
			return getRuleContext(KlassDeclContext.class,0);
		}
		public FunctionDeclContext functionDecl() {
			return getRuleContext(FunctionDeclContext.class,0);
		}
		public VarDeclContext varDecl() {
			return getRuleContext(VarDeclContext.class,0);
		}
		public TopLevelDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_topLevelDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HashListener ) ((HashListener)listener).enterTopLevelDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HashListener ) ((HashListener)listener).exitTopLevelDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HashVisitor ) return ((HashVisitor<? extends T>)visitor).visitTopLevelDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TopLevelDeclContext topLevelDecl() throws RecognitionException {
		TopLevelDeclContext _localctx = new TopLevelDeclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_topLevelDecl);
		try {
			setState(155);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Klass:
				enterOuterAlt(_localctx, 1);
				{
				setState(150);
				klassDecl();
				}
				break;
			case Bebin:
				enterOuterAlt(_localctx, 2);
				{
				setState(151);
				functionDecl();
				}
				break;
			case Adad:
			case Ashari:
			case Boole:
			case Matn:
			case Harf:
				enterOuterAlt(_localctx, 3);
				{
				setState(152);
				varDecl();
				setState(153);
				match(T__1);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class KlassDeclContext extends ParserRuleContext {
		public TerminalNode Klass() { return getToken(HashParser.Klass, 0); }
		public TerminalNode CLASSID() { return getToken(HashParser.CLASSID, 0); }
		public List<KlassBodyContext> klassBody() {
			return getRuleContexts(KlassBodyContext.class);
		}
		public KlassBodyContext klassBody(int i) {
			return getRuleContext(KlassBodyContext.class,i);
		}
		public KlassDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_klassDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HashListener ) ((HashListener)listener).enterKlassDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HashListener ) ((HashListener)listener).exitKlassDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HashVisitor ) return ((HashVisitor<? extends T>)visitor).visitKlassDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final KlassDeclContext klassDecl() throws RecognitionException {
		KlassDeclContext _localctx = new KlassDeclContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_klassDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			match(Klass);
			setState(158);
			match(CLASSID);
			setState(159);
			match(T__3);
			setState(163);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 32)) & ~0x3f) == 0 && ((1L << (_la - 32)) & 274878038047L) != 0)) {
				{
				{
				setState(160);
				klassBody();
				}
				}
				setState(165);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(166);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class KlassBodyContext extends ParserRuleContext {
		public FieldsContext fields() {
			return getRuleContext(FieldsContext.class,0);
		}
		public FunctionDeclContext functionDecl() {
			return getRuleContext(FunctionDeclContext.class,0);
		}
		public ConstructorContext constructor() {
			return getRuleContext(ConstructorContext.class,0);
		}
		public KlassBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_klassBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HashListener ) ((HashListener)listener).enterKlassBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HashListener ) ((HashListener)listener).exitKlassBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HashVisitor ) return ((HashVisitor<? extends T>)visitor).visitKlassBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final KlassBodyContext klassBody() throws RecognitionException {
		KlassBodyContext _localctx = new KlassBodyContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_klassBody);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(171);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				setState(168);
				fields();
				}
				break;
			case 2:
				{
				setState(169);
				functionDecl();
				}
				break;
			case 3:
				{
				setState(170);
				constructor();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConstructorContext extends ParserRuleContext {
		public TerminalNode Bebin() { return getToken(HashParser.Bebin, 0); }
		public TerminalNode CLASSID() { return getToken(HashParser.CLASSID, 0); }
		public ParamContext param() {
			return getRuleContext(ParamContext.class,0);
		}
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public ConstructorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constructor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HashListener ) ((HashListener)listener).enterConstructor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HashListener ) ((HashListener)listener).exitConstructor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HashVisitor ) return ((HashVisitor<? extends T>)visitor).visitConstructor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConstructorContext constructor() throws RecognitionException {
		ConstructorContext _localctx = new ConstructorContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_constructor);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(173);
			match(Bebin);
			setState(174);
			match(CLASSID);
			setState(175);
			match(T__5);
			setState(177);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 133143986176L) != 0)) {
				{
				setState(176);
				param();
				}
			}

			setState(179);
			match(T__6);
			setState(180);
			match(T__3);
			setState(184);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1031461612839501888L) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & 127L) != 0)) {
				{
				{
				setState(181);
				stmt();
				}
				}
				setState(186);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(187);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CallConstructorContext extends ParserRuleContext {
		public TerminalNode CLASSID() { return getToken(HashParser.CLASSID, 0); }
		public ArgsContext args() {
			return getRuleContext(ArgsContext.class,0);
		}
		public CallConstructorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_callConstructor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HashListener ) ((HashListener)listener).enterCallConstructor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HashListener ) ((HashListener)listener).exitCallConstructor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HashVisitor ) return ((HashVisitor<? extends T>)visitor).visitCallConstructor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CallConstructorContext callConstructor() throws RecognitionException {
		CallConstructorContext _localctx = new CallConstructorContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_callConstructor);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(189);
			match(CLASSID);
			setState(190);
			match(T__5);
			setState(192);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (((((_la - 6)) & ~0x3f) == 0 && ((1L << (_la - 6)) & -288160003097690111L) != 0)) {
				{
				setState(191);
				args();
				}
			}

			setState(194);
			match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FieldsContext extends ParserRuleContext {
		public VarDeclContext varDecl() {
			return getRuleContext(VarDeclContext.class,0);
		}
		public ObjectInstantiationContext objectInstantiation() {
			return getRuleContext(ObjectInstantiationContext.class,0);
		}
		public FieldsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fields; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HashListener ) ((HashListener)listener).enterFields(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HashListener ) ((HashListener)listener).exitFields(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HashVisitor ) return ((HashVisitor<? extends T>)visitor).visitFields(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FieldsContext fields() throws RecognitionException {
		FieldsContext _localctx = new FieldsContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_fields);
		try {
			setState(202);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Adad:
			case Ashari:
			case Boole:
			case Matn:
			case Harf:
				enterOuterAlt(_localctx, 1);
				{
				setState(196);
				varDecl();
				setState(197);
				match(T__1);
				}
				break;
			case CLASSID:
				enterOuterAlt(_localctx, 2);
				{
				setState(199);
				objectInstantiation();
				setState(200);
				match(T__1);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FieldAccessContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(HashParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(HashParser.ID, i);
		}
		public FieldAccessContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fieldAccess; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HashListener ) ((HashListener)listener).enterFieldAccess(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HashListener ) ((HashListener)listener).exitFieldAccess(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HashVisitor ) return ((HashVisitor<? extends T>)visitor).visitFieldAccess(this);
			else return visitor.visitChildren(this);
		}
	}
